k8's stuffs/project_deployment_templates/Traefik-Ingress/basic/Middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security-headers
spec:
  headers:
    accessControlAllowHeaders:
      - "Content-Type"
      - "Authorization"
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
    accessControlAllowOrigin:
      - "*"
    accessControlMaxAge: 100
    addVaryHeader: true
